# store_api

./: pyproject.toml
store/: main.py
store/core/: config.py
store/schemas/: product.py
tests/: factories.py
tests/schemas/: test_product.py
